@@ -15,19 +15,19 @@ DIST apcupsd-3.14.10.tar.gz 1336852 SHA256 0707b5ec9916fbde9e44eb8d18037c8d8f75d
 DIST apcupsd-3.14.12.tar.gz 2014699 SHA256 1b4f703cb19cfdf44daf173dc8394cafd30fee0b30a0c75a7d19db622454a440 SHA512 2ed409ce4c7c7af667cecf0c73c47315d7516c696383c811945ead720afc146fe2ceda0efef722c3208a1b41a7d4661c9544bc4fe37a36ca4779a5dc1621f3d4 WHIRLPOOL 13a2491e4ad5446ba91a075f7408e48e94a35885288c9ee6108891d89412be5c81f69f4ab5064f86b8bece8c0de44357e4c378d05aad5d9d27bd85f0d95a83d5
 DIST apcupsd-3.14.8.tar.gz 1317601 SHA256 8e7f2574d3abaf6637da3e790860c3f9ba64fab1ec7e50bb080de4439441c5a7 SHA512 07e6a15538bf1824b5063a1a93f33231639cf962e658c0dada1b244f2554af81824825d807ea81fd0388e25ed8fac0957621bfded96e3faeb7b594548fc4d418 WHIRLPOOL e5a580afc4955a373f020cb6e4ccbf07f9f020d4c15eaae59b416499c25a00b9d4bbc6af012bd2529024e8a3668a1d7c47f19f1bcb99f5ba60dc0108fa13c4f2
 EBUILD apcupsd-3.14.10-r6.ebuild 4244 SHA256 6d5865b612f1b8ee6f1cbb02b146c915e465c0ea1f9183e9eb081b941059de2a SHA512 3308a48a957fee3553af6129f3a6420f66980090edcd1aaa055e1f1e07c76a44c808ac5ecf0227457f035434e6d8b9c28b870152861e6780f874784bc0bb21b3 WHIRLPOOL a402630d880ea9f38bd0a365202677cfe7f5b6a630c5516aedb766a8e7b2972040a8c5424a4bb34018df9b970a13d3e2ea2d7d6da42e79eed9c44aaf91fbdea6
-EBUILD apcupsd-3.14.12.ebuild 4174 SHA256 94458ad6879c16fba4ca5eeca96c58852eb4ac2f08be484a9f1c6bf00f61a5e5 SHA512 1d22c8b270a75e1ab4c7ac1836ba63672a96cab1567ec056469b0820c5dfed97c6110c83c49d2a1f6629571e15633bc0662117e8f7006648735d752bf9767fce WHIRLPOOL 775070190093884e18cc6039268cc5767fa290b9214e7f2761573ada2119c083c546b110a2c51ab170502aba8b1e0f49dd0bd9064f0f058f3d7e5e9d74f7b524
+EBUILD apcupsd-3.14.12.ebuild 4202 SHA256 672c0a0ada37f9ba296a11963d2f50937442c530b41c402d513dad2fdb337059 SHA512 6fdfcbcdd3c26fad42176a663ddf5a2f727dcec55c364bd3dbdf89a41b525471df520110a42073d653464864821b23c5c33f20b00a006d45335301a3c6c64a08 WHIRLPOOL c31e09ed7de6b4fe2a342c2fa608e5b3779c52895c850b0d521c61a238dcc805894345113b53c64dcb116d99d9d4e6bf5c1b8968de99937d938f748251306f48
 EBUILD apcupsd-3.14.8-r1.ebuild 3863 SHA256 f5d984daecd4a0af67bdd5c44abeea7a4f47ed6ee94623e64e89116ff77e83b5 SHA512 5abc26eb6a258f39d7b4a617e87ee00a51c23aaeff76edd9fbc5a7b898552c5e1a270acd941d7e4d5818184d807e986da0593c239f6945c8d652867966197220 WHIRLPOOL 6ef00f538fdd0da2ac2639ece9e3209ba87190032c650cb003e7358e9f8e66f5255f58bacd0a59a7a16f17f2c393af4fb23eba14af403289444fc18d5b0140d4
 EBUILD apcupsd-3.14.8-r2.ebuild 4083 SHA256 0aeb575b8acfe8d51510a0b52b6c3aa4e22cdf7668949a5a3ba6591d6372f448 SHA512 d5d53f3de737241393362785e47380434ead0510e35f3fb47e4ca38d50b69024cd3bd8c8a35c3f519dfbddfd33cb12479f31f40af804e362e9e84e432d0f8882 WHIRLPOOL 01509edfd223ce2e524d1abdc63b9a3df401376229e533a0a5a0de5616623cc00aa562bc62cd072594f1f3e58ff924f959b7902698c79caa6cc4924223defcec
-MISC ChangeLog 29753 SHA256 372f21ad5d464b800d334eb3f6431e879ccc6a05911590d6ec6019266565fd9c SHA512 c8e26a55a029974819d655470af7b45df7e419266552bf57a95634370bec5a3d0a72240d41f8c16a57a9de26e55f2f24c33a91ba8cda0263fcdcf3558f65e9a4 WHIRLPOOL 11c031e763faff007db443d1c8d052b4178bc219fb43dd966e63a91a6adc122ee833fda5cdc88867fcef6cd557b9152e9125a81d481964e1c418b6c825eebd45
+MISC ChangeLog 29995 SHA256 87f78f3859281ea5bf7375027832cb3d8411fbbabbf85181b494015b588ae08c SHA512 65c23e69ca0dddae76054d3c74c9d3bdd0f7ceea173e1ab30f525675e62dd1dbb65f1ae637fae2d93ffc6a4aa9330975d486e5477bce769c19631f10fa417f4f WHIRLPOOL a09c798f9dace3706056f6fd3290f020b27d9388be9ad34b9ac518f9b96310f66778a8a052229c694aebc6472f8e326478d1e4874aab50167928039315244718
 MISC metadata.xml 854 SHA256 ed821e0f70dad05d8ec1475d40654bb39a4d4ce0e9afb3901282dd05a3662cc5 SHA512 b3d9dbbb217711502dc36e1aca3c6efb18eb31a1f375241ed12a5e1312e19fd74e3659bb9bab3afd9eeff41de7f643a367a406bab09a1bce9d7f41b5e28da988 WHIRLPOOL 7ed63a7e8f4560fccc24d664e6d43c0a9b726b7c41cb1504753869633611968d3d4d29403b07dd0c17e40c8e368b01450d36cf44215906843ff70d505bd0fb7c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTmAoeAAoJECo/aRed9267LKIIAIJJeEZubsmH1eFd/2NrROQM
-NjQMcTWxcRNekjKUhndY2R/dDqywC7wf9kPCpe8YNzhMUbXAM3ZS5+3lhBdCyj7s
-vNvKEksTzVnht2KAub4v+++z8yz+ktySov2axpNG4kNc64iA8tbYfGSFEpIzjGe8
-gLv5uniNFffE16UrqdNwuG6Zg4NiXIL3RSHNKzNmy/C2eosUQJQOOQU6rO85dW72
-JyQ5vCQoB4BrAIeEF4AcSkYC1NANUswaFSIEGralOs6e+zV9Bx0+y/cGR8w28/hb
-VOSXZBB3DbK1iPuubCxlDH31+RsfnjSqXSoUN8W/4fES2HJ/Cy7Dpk+HgbFRWH4=
-=3yot
+iQEcBAEBCAAGBQJTq0K8AAoJEC1LWXx4YDensxUH/1xRbSwHWNKmYF8OiysjKlO5
+6OtqpV1jW/TMtdkPJgEhCxHJxB8FXCjMcYQQKPOS81SPOmuQX3rMbdiwxsaVsxB1
+h1J5rRB8JPfpRDVLTXnnx1UR225AO4XzlEgi8cd8GX8o7p1ScVRufzkoz5SpIxP1
+UawRvIcForETVCK45ZLCgBMKv8m1GUwTdzD8/NhgZ7aNyhnERLcbibTO0vq0r4em
+ZD4eYVct9m83s9QM7HVxa+hWnVRr1CMRu1WO0+pthZRfB4EBI7SblGEjS4HorS6t
+0bGA0gwWHwCHk/fWukj6FbnK3vtDYvrSDSyxciNE1bE+aYMpSQewd9BMmuj/LE8=
+=myRI
 -----END PGP SIGNATURE-----
